--- a/ConUHacks/static/styles.css
+++ b/ConUHacks/static/styles.css
@@ -1,7 +1,7 @@
 body {
-  background-color: red;  
   /* Location of the image */
   background-image: url(images/2.jpg);
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url(images/2.jpg));
   
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
